# Brew

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
auth/: auth.py
controller/: controller.py
models/: models.py
routes/: auth.py  fases.py  perguntas.py  progress.py  temas.py  users.py
schemas/: schemas.py
services/: default_json.py  json_llm.py  post.py
settings/: database.py
templates/: index.html
