[project]
name = "brew"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bcrypt==3.2.0",
    "fastapi>=0.115.11",
    "gradio-client>=1.8.0",
    "jinja2>=3.1.6",
    "mysqlclient>=2.2.7",
    "ollama>=0.4.7",
    "passlib>=1.7.4",
    "pyjwt>=2.10.1",
    "pymupdf>=1.25.4",
    "pymysql>=1.1.1",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.39",
    "uvicorn>=0.34.0",
]
